Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment
  namespace: nnbe-poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: firsttry
  template:
    metadata:
      labels:
        app: firsttry
    spec:
      containers:
        - name: first-container
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - containerPort: 80
