Kubernetes/blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: nnbe-poc
spec:
  selector:
    app: hello-world
    version: blue
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  namespace: nnbe-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
      version: blue
  template:
    metadata:
      labels:
        app: hello-world
        version: blue
    spec:
      containers:
      - name: blue-container
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
