Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - nnbepocaks.4879c9df-87ea-49ae-81e1-f3fb24a8a05f.az.insim.biz
  #     secretName: keyvault-aks-helloworld
  rules:
    - host: k8s.ypto-sdcoe.com
      http:
        paths:
          - path: /hello-test/(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 8080
